[feat] 그룹별 게시판 기본 API 추가
